# kdlquery

./: .gitignore  LICENSE  QUERY.md  README.md  llm.txt  main.py  pyproject.toml
examples/: config_dsl.py  node_selectors.py  xml_reader.py
kdlquery/: __init__.py  dict_reader.py  document.py  parser.py  reader.py  selector.py  types.py
tests/: test_kdl_parser.py  test_navigation.py  test_reader.py  test_selector.py
